--- a/views/layouts/navpanel.ejs
+++ b/views/layouts/navpanel.ejs
@@ -4,7 +4,7 @@
         <!-- Logo ( * your text or image into link tag *) -->
         <div class="nav-logo-wrap local-scroll">
             <a href="#top" class="logo">
-                <img src="/images/devin_watermark_base_inverted.png" alt="" />
+                <img id="logonav" src="/images/devin_watermark_base.png" alt="" />
             </a>
         </div>
         <div class="mobile-nav">
