--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -12,9 +12,9 @@
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="/images/favicon.png">
-    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">
+    <!-- <link rel="apple-touch-icon" href="/images/apple-touch-icon.png"> -->
+    <!-- <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png"> -->
+    <!-- <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png"> -->
 
     <!-- CSS -->
     <link rel="stylesheet" href="/templates/css/bootstrap.min.css">
