--- a/views/layouts/sliderblock.ejs
+++ b/views/layouts/sliderblock.ejs
@@ -10,7 +10,7 @@
             <div class="home-content">
                 <div class="home-text">
 
-                    <h2 class="hs-line-8 no-transp font-alt mb-50 mb-xs-30">
+                    <h2 class="hs-line-8 textUp no-transp font-alt mb-50 mb-xs-30">
                         <%= info.h2Text %>
                     </h2>
 
