--- a/views/layouts/about.ejs
+++ b/views/layouts/about.ejs
@@ -11,160 +11,35 @@
 
                 <div class="col-md-4">
                     <blockquote>
-                        <p>
-                            Design is&nbsp;not making beauty, beauty emerges from selection, affinities,
-                            integration, love.
-                        </p>
+                        <p>The true entrepreneur is a doer, not a dreamer.</p>
                         <footer>
-                            Louis Kahn
+                            Nolan Bushnell
                         </footer>
                     </blockquote>
                 </div>
 
                 <div class="col-md-4 col-sm-6 mb-sm-50 mb-xs-30">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus
-                    pellentesque mattis. Maecenas volutpat, diam enim sagittis quam, id porta quam. Sed id dolor
-                    consectetur fermentum nibh volutpat, accumsan purus.
+                    <h4>Mission</h4>
+                    <p>
+                        A group of professionals focused on providing quality and cutting edge solutions for
+                        each of our clients
+                    </p>
                 </div>
 
                 <div class="col-md-4 col-sm-6 mb-sm-50 mb-xs-30">
-                    Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque
-                    porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero.
-                    Donec vel ultricies purus. Nam dictum sem, eu aliquam.
+                    <h4>Vision</h4>
+                    <p>
+                        Become a competitive corporate team in the market with a view to becoming an industry leader in
+                        the technology market.
+                    </p>
                 </div>
 
             </div>
         </div>
 
-        <div class="row">
-
-            <!-- Team item -->
-            <div class="col-sm-4 mb-xs-30 wow fadeInUp">
-                <div class="team-item">
-
-                    <div class="team-item-image">
-
-                        <img src="/images/team/team-1.jpg" alt="" />
-
-                        <div class="team-item-detail">
-
-                            <h4 class="font-alt normal">Hello & Welcome!</h4>
-
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a&nbsp;iaculis
-                                diam.
-                            </p>
-
-                            <div class="team-social-links">
-                                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-pinterest"></i></a>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="team-item-descr font-alt">
-
-                        <div class="team-item-name">
-                            Thomas Rhythm
-                        </div>
-
-                        <div class="team-item-role">
-                            Art Director
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-            <!-- End Team item -->
-
-            <!-- Team item -->
-            <div class="col-sm-4 mb-xs-30 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="team-item">
-
-                    <div class="team-item-image">
-
-                        <img src="/images/team/team-2.jpg" alt="" />
-
-                        <div class="team-item-detail">
-
-                            <h4 class="font-alt normal">Nice to meet!</h4>
-
-                            <p>
-                                Curabitur augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh
-                                tristique porta.
-                            </p>
-
-                            <div class="team-social-links">
-                                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-pinterest"></i></a>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="team-item-descr font-alt">
-
-                        <div class="team-item-name">
-                            Marta Laning
-                        </div>
-
-                        <div class="team-item-role">
-                            Web engineer
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-            <!-- End Team item -->
-
-            <!-- Team item -->
-            <div class="col-sm-4 mb-xs-30 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="team-item">
-
-                    <div class="team-item-image">
-
-                        <img src="/images/team/team-3.jpg" alt="" />
-
-                        <div class="team-item-detail">
-
-                            <h4 class="font-alt normal">Whats Up!</h4>
-
-                            <p>
-                                Adipiscing elit curabitur eu&nbsp;adipiscing lacus eu&nbsp;adipiscing lacus,
-                                a&nbsp;iaculis diam.
-                            </p>
-
-                            <div class="team-social-links">
-                                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-pinterest"></i></a>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="team-item-descr font-alt">
-
-                        <div class="team-item-name">
-                            Steve ANDERS
-                        </div>
-
-                        <div class="team-item-role">
-                            Developer
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-            <!-- End Team item -->
-
-        </div>
+        <!-- Team Section Sart -->
+        <%- partial('team.ejs') %>
+        <!-- Team Section End -->
     </div>
 </section>
 <!-- End About Section -->
