--- a/views/layouts/action_lets_talk.ejs
+++ b/views/layouts/action_lets_talk.ejs
@@ -1,6 +1,6 @@
 <!-- Call Action Section -->
 <section class="page-section pt-0 pb-0 banner-section bg-dark"
-    data-background="images/full-width-images/section-bg-2.jpg">
+    data-background="images/full-width-images/code_in_screen.jpg">
     <div class="container relative">
 
         <div class="row">
@@ -22,8 +22,8 @@
 
             </div>
 
-            <div class="col-sm-6 banner-image wow fadeInUp" data-wow-duration="1.2s">
-                <img src="/images/promo-1.png" alt="" />
+            <div class="col-sm-6 mt-150 banner-image wow fadeInUp" data-wow-duration="1.5s">
+                <img src="/images/devin_white_full.png" alt="" />
             </div>
 
         </div>
