--- a/views/layouts/features.ejs
+++ b/views/layouts/features.ejs
@@ -9,101 +9,19 @@
         <!-- Features Grid -->
         <div class="row multi-columns-row alt-features-grid">
 
+            <% features.forEach(function(feature){ %>
             <!-- Features Item -->
             <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="alt-features-item align-center">
                     <div class="alt-features-icon">
-                        <span class="icon-flag"></span>
+                        <span class='<%= feature.icon %>'></span>
                     </div>
-                    <h3 class="alt-features-title font-alt">We’re Creative</h3>
-                    <div class="alt-features-descr align-left">
-                        Lorem ipsum dolor sit amet, c-r adipiscing elit.
-                        In maximus ligula semper metus pellentesque mattis.
-                        Maecenas volutpat, diam enim.
-                    </div>
+                    <h3 class="alt-features-title font-alt"><%= feature.tittle %></h3>
+                    <div class="alt-features-descr align-left"><%= feature.description %></div>
                 </div>
             </div>
             <!-- End Features Item -->
-
-            <!-- Features Item -->
-            <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="alt-features-item align-center">
-                    <div class="alt-features-icon">
-                        <span class="icon-clock"></span>
-                    </div>
-                    <h3 class="alt-features-title font-alt">We’re Punctual</h3>
-                    <div class="alt-features-descr align-left">
-                        Proin fringilla augue at maximus vestibulum.
-                        Nam pulvinar vitae neque et porttitor. Praesent sed
-                        nisi eleifend, lorem fermentum orci sit amet, iaculis libero.
-                    </div>
-                </div>
-            </div>
-            <!-- End Features Item -->
-
-            <!-- Features Item -->
-            <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="alt-features-item align-center">
-                    <div class="alt-features-icon">
-                        <span class="icon-hotairballoon"></span>
-                    </div>
-                    <h3 class="alt-features-title font-alt">We have magic</h3>
-                    <div class="alt-features-descr align-left">
-                        Curabitur iaculis accumsan augue, nec finibus mauris pretium eu.
-                        Duis placerat ex gravida nibh tristique porta. Nulla facilisi.
-                        Suspendisse ultricies eros blandit.
-                    </div>
-                </div>
-            </div>
-            <!-- End Features Item -->
-
-            <!-- Features Item -->
-            <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="alt-features-item align-center">
-                    <div class="alt-features-icon">
-                        <span class="icon-heart"></span>
-                    </div>
-                    <h3 class="alt-features-title font-alt">We love minimalism</h3>
-                    <div class="alt-features-descr align-left">
-                        Cras luctus interdum sodales. Quisque quis odio dui. Sedes sit
-                        amet neque malesuada, lobortis commodo magna ntesque pharetra
-                        metus vivera sagittis.
-                    </div>
-                </div>
-            </div>
-            <!-- End Features Item -->
-
-            <!-- Features Item -->
-            <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="alt-features-item align-center">
-                    <div class="alt-features-icon">
-                        <span class="icon-linegraph"></span>
-                    </div>
-                    <h3 class="alt-features-title font-alt">We’re responsible</h3>
-                    <div class="alt-features-descr align-left">
-                        Fusce aliquet quam eget neque ultrices elementum. Nulla posuere
-                        felis id arcu blandit sagittis. Eleifender vestibulum purus, sit
-                        amet vulputate risus.
-                    </div>
-                </div>
-            </div>
-            <!-- End Features Item -->
-
-            <!-- Features Item -->
-            <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="alt-features-item align-center">
-                    <div class="alt-features-icon">
-                        <span class="icon-chat"></span>
-                    </div>
-                    <h3 class="alt-features-title font-alt">We're Friendly</h3>
-                    <div class="alt-features-descr align-left">
-                        Pulvinar vitae neque et porttitor. Integer non dapibus diam, ac
-                        eleifend lectus. Praesent sed nisi eleifend, fermentum orci sit
-                        amet, iaculis libero interdum.
-                    </div>
-                </div>
-            </div>
-            <!-- End Features Item -->
+            <% }); %>
 
         </div>
         <!-- End Features Grid -->
