--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -23,13 +23,12 @@
 
             <!-- Copyright -->
             <div class="footer-copy font-alt">
-                <a href="http://themeforest.net/user/theme-guru/portfolio" target="_blank">&copy; Rhythm
-                    2016</a>.
+                <a href="http://themeforest.net/user/theme-guru/portfolio" target="_blank">&copy; DevIn <%- new Date().getFullYear() %>.</a>
             </div>
             <!-- End Copyright -->
 
             <div class="footer-made">
-                Made with love for great people.
+                Made with <i class="fa fa-heart text-danger" aria-hidden="true"></i> for amazing people.
             </div>
 
         </div>
