--- a/views/layouts/porfolio.ejs
+++ b/views/layouts/porfolio.ejs
@@ -24,110 +24,32 @@
         <!-- Works Filter -->
         <div class="works-filter font-alt align-center">
             <a href="#" class="filter active" data-filter="*">All works</a>
-            <a href="#branding" class="filter" data-filter=".branding">Branding</a>
-            <a href="#design" class="filter" data-filter=".design">Design</a>
-            <a href="#photography" class="filter" data-filter=".photography">Photography</a>
+            <% navtabs.tabs.forEach(function(bar){ %>
+            <a href='<%= bar.tag %>' class="filter" data-filter='<%= bar.tag.replace("#", ".") %>'><%= bar.tittle %></a>
+            <% }); %>
         </div>
         <!-- End Works Filter -->
 
         <!-- Works Grid -->
         <ul class="works-grid work-grid-3 work-grid-gut clearfix font-alt hover-white hide-titles" id="work-grid">
 
+            <% portfolio.forEach(function(work){ %>
             <!-- Work Item (Lightbox) -->
-            <li class="work-item mix photography">
-                <a href="/images/portfolio/full-project-1.jpg" class="work-lightbox-link mfp-image">
+            <li class='work-item mix <%= work.section %>'>
+                <a href='<%= work.fullpicture %>' class="work-lightbox-link mfp-image">
                     <div class="work-img">
-                        <img src="/images/portfolio/projects-1.jpg" alt="Work" />
+                        <img src='<%= work.fullpicture %>' alt="Work" />
                     </div>
                     <div class="work-intro">
-                        <h3 class="work-title">Portrait</h3>
+                        <h3 class="work-title"><%= work.name %></h3>
                         <div class="work-descr">
-                            Lightbox
+                            <%= work.client %>
                         </div>
                     </div>
                 </a>
             </li>
             <!-- End Work Item -->
-
-            <!-- Work Item (External Page) -->
-            <li class="work-item mix branding design">
-                <a href="portfolio-single-1.html" class="work-ext-link">
-                    <div class="work-img">
-                        <img class="work-img" src="images/portfolio/projects-2.jpg" alt="Work" />
-                    </div>
-                    <div class="work-intro">
-                        <h3 class="work-title">Vase 3D</h3>
-                        <div class="work-descr">
-                            External Page
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <!-- End Work Item -->
-
-            <!-- Work Item (External Page) -->
-            <li class="work-item mix branding">
-                <a href="portfolio-single-1.html" class="work-ext-link">
-                    <div class="work-img">
-                        <img class="work-img" src="/images/portfolio/projects-3.jpg" alt="Work" />
-                    </div>
-                    <div class="work-intro">
-                        <h3 class="work-title">Boy in T-shirt</h3>
-                        <div class="work-descr">
-                            External Page
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <!-- End Work Item -->
-
-            <!-- Work Item (External Page) -->
-            <li class="work-item mix design photography">
-                <a href="portfolio-single-1.html" class="work-ext-link">
-                    <div class="work-img">
-                        <img class="work-img" src="/images/portfolio/projects-4.jpg" alt="Work" />
-                    </div>
-                    <div class="work-intro">
-                        <h3 class="work-title">Space</h3>
-                        <div class="work-descr">
-                            External Page
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <!-- End Work Item -->
-
-            <!-- Work Item (External Page) -->
-            <li class="work-item mix design">
-                <a href="portfolio-single-1.html" class="work-ext-link">
-                    <div class="work-img">
-                        <img class="work-img" src="/images/portfolio/projects-5.jpg" alt="Work" />
-                    </div>
-                    <div class="work-intro">
-                        <h3 class="work-title">Model</h3>
-                        <div class="work-descr">
-                            External Page
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <!-- End Work Item -->
-
-            <!-- Work Item (Lightbox) -->
-            <li class="work-item mix design branding">
-                <a href="/images/portfolio/full-project-3.jpg" class="work-lightbox-link mfp-image">
-                    <div class="work-img">
-                        <img src="/images/portfolio/projects-6.jpg" alt="Work" />
-                    </div>
-                    <div class="work-intro">
-                        <h3 class="work-title">Young Man</h3>
-                        <div class="work-descr">
-                            Lightbox
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <!-- End Work Item -->
+            <% }); %>
 
         </ul>
         <!-- End Works Grid -->
