pricing sections not added

--- a/views/layouts/action_lets_talk.ejs
+++ b/views/layouts/action_lets_talk.ejs
@@ -9,10 +9,10 @@
 
                 <div class="mt-140 mt-lg-80 mb-140 mb-lg-80">
                     <div class="banner-content">
-                        <h3 class="banner-heading font-alt">Looking for exclusive digital services?</h3>
+                        <h3 class="banner-heading font-alt">Looking for exclusive services?</h3>
                         <div class="banner-decription">
-                            Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.
-                            Integer non dapibus diam, ac eleifend lectus.
+                            Our team is at the disposal of your business to develop that solution that meets your needs,
+                            to provide scalability and high availability.
                         </div>
                         <div class="local-scroll">
                             <a href="#contact" class="btn btn-mod btn-w btn-medium btn-round">Lets talk</a>
