--- a/views/layouts/features.ejs
+++ b/views/layouts/features.ejs
@@ -1,5 +1,5 @@
 <!-- Features Section -->
-<section class="page-section">
+<section class="page-section" id="whyus">
     <div class="container relative">
 
         <h2 class="section-title font-alt mb-70 mb-sm-40">
