--- a/views/layouts/contact.ejs
+++ b/views/layouts/contact.ejs
@@ -21,7 +21,7 @@
                                 Call Us
                             </div>
                             <div class="ci-text">
-                                +61 3 8376 6284
+                                <%= contact.phone %>
                             </div>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                                 Address
                             </div>
                             <div class="ci-text">
-                                245 Quigley Blvd, Ste K
+                                <%= contact.address %>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 Email
                             </div>
                             <div class="ci-text">
-                                <a href="mailto:support@bestlooker.pro">support@bestlooker.pro</a>
+                                <a href='mailto:<%= contact.email %>'><%= contact.email %></a>
                             </div>
                         </div>
                     </div>
