--- a/views/layouts/navpanel.ejs
+++ b/views/layouts/navpanel.ejs
@@ -17,7 +17,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#news">News</a></li>
+                <li><a href="#whyus">Why us?</a></li>
                 <li><a href="#contact">Contacts</a></li>
 
             </ul>
