adding local scrool to slider button

--- a/views/layouts/sliderblock.ejs
+++ b/views/layouts/sliderblock.ejs
@@ -18,8 +18,8 @@
                         <%= info.h1Text %>
                     </h1>
 
-                    <div>
-                        <a href="pages-pricing-1.html" class="btn btn-mod btn-border-w btn-medium btn-round">Get
+                    <div class="local-scroll">
+                        <a href="#contact" class="btn btn-mod btn-border-w btn-medium btn-round">Get
                             Pricing</a>
                     </div>
 
