product skeleton almost done

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -62,6 +62,14 @@
         <%- partial('../layouts/services.ejs') %>
         <!-- End Services Section -->
 
+        <!-- Divider -->
+        <hr class="mt-0 mb-0 " />
+        <!-- End Divider -->
+
+        <!-- Services Section -->
+        <%- partial('../layouts/products.ejs') %>
+        <!-- End Services Section -->
+
 
         <!-- Call Action Section -->
         <%- partial('../layouts/action_lets_talk.ejs') %>
