--- a/views/layouts/navpanel.ejs
+++ b/views/layouts/navpanel.ejs
@@ -16,6 +16,7 @@
                 <li class="active"><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#products">Products</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#whyus">Why us?</a></li>
                 <li><a href="#contact">Contacts</a></li>
