--- a/views/layouts/products.ejs
+++ b/views/layouts/products.ejs
@@ -2,30 +2,32 @@
 <section class="page-section" id="products">
     <div class="container relative">
 
-        <h2 class="section-title font-alt mb-70 mb-sm-40">
+        <h2 class="section-title font-alt mb-35 mb-sm-20">
             Products
         </h2>
 
         <!-- Section -->
         <section class="page-section">
             <div class="container relative">
+
+                <% products.forEach(function(product, index){ %>
                 <!-- Nav tabs -->
-                <ul class="nav nav-tabs tpl-alt-tabs font-alt pb-30 pb-sm-0">
+                <ul class="nav nav-tabs tpl-alt-tabs font-alt pb-15 pb-sm-0">
                     <li class="active">
-                        <a href="#appdetails" data-toggle="tab">
+                        <a href='#<%= product.tag %>-details' data-toggle="tab">
 
                             <div class="alt-tabs-icon">
-                                <span class="icon-strategy"></span>
+                                <i class="fa fa-rocket" aria-hidden="true"></i>
                             </div>
 
                             App Details
                         </a>
                     </li>
                     <li>
-                        <a href="#apppricing" data-toggle="tab">
+                        <a href='#<%= product.tag %>-pricing' data-toggle="tab">
 
                             <div class="alt-tabs-icon">
-                                <span class="icon-desktop"></span>
+                                <i class="fa fa-usd" aria-hidden="true"></i>
                             </div>
 
                             Pricing
@@ -33,9 +35,12 @@
                     </li>
                 </ul>
                 <!-- End Nav tabs -->
+
+                <!-- Tab Content -->
                 <div class="tab-content tpl-tabs-cont">
 
-                    <div class="tab-pane fade in active" id="appdetails">
+                    <!-- Detail Section -->
+                    <div class="tab-pane fade in active" id='<%= product.tag %>-details'>
                         <div class="row">
 
                             <div class="col-md-7 mb-sm-40">
@@ -62,13 +67,10 @@
                                 <!-- About Project -->
                                 <div class="text">
 
-                                    <h3 class="font-alt mb-30 mb-xxs-10">Warehouse App</h3>
+                                    <h3 class="font-alt mb-30 mb-xxs-10"><%= product.name %></h3>
 
                                     <p>
-                                        Phasellus facilisis mauris vel velit molestie pellentesque. Donec rutrum, tortor
-                                        ut
-                                        elementum venenatis, purus magna bibendum nisl, ut accumsan ipsum erat eu
-                                        sapien.
+                                        <%= product.description %>
                                     </p>
 
                                     <div class="mt-40">
@@ -83,57 +85,21 @@
                             </div>
                         </div>
                     </div>
+                    <!-- End Detail Section -->
 
-                    <div class="tab-pane fade in active" id="apppricing">
-                        <div class="row">
-
-                            <div class="col-md-7 mb-sm-40">
-
-                                <!-- Gallery -->
-                                <div class="work-full-media mt-0 white-shadow">
-                                    <ul class="clearlist work-full-slider owl-carousel">
-                                        <li>
-                                            <img src="images/portfolio/full-project-1.jpg" alt="" />
-                                        </li>
-                                        <li>
-                                            <img src="images/portfolio/full-project-2.jpg" alt="" />
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!-- End Gallery -->
-
-                            </div>
-
-                            <div class="col-md-5 col-lg-4 col-lg-offset-1">
-
-
-
-                                <!-- About Project -->
-                                <div class="text">
-
-                                    <h3 class="font-alt mb-30 mb-xxs-10">Otra Vaina App</h3>
-
-                                    <p>
-                                        Phasellus facilisis mauris vel velit molestie pellentesque. Donec rutrum, tortor
-                                        ut
-                                        elementum venenatis, purus magna bibendum nisl, ut accumsan ipsum erat eu
-                                        sapien.
-                                    </p>
-
-                                    <div class="mt-40">
-                                        <a href="#" class="btn btn-mod btn-border btn-round btn-medium"
-                                            target="_blank">View
-                                            online</a>
-                                    </div>
-
-                                </div>
-                                <!-- End About Project -->
-
-                            </div>
-                        </div>
+                    <% if (product.pricing) { %>
+                    <!-- Pricing Section -->
+                    <div class="tab-pane fade" id="<%= product.tag %>-pricing">
+                        <%- partial(product.pricing, {stacks: product.stacks}) %>
                     </div>
+                    <!-- End Pricing Section -->
+                    <% } %>
 
                 </div>
+                <!-- End Tab Content -->
+
+                <% }); %>
+
             </div>
         </section>
         <!-- End Section -->
