--- a/views/layouts/contact.ejs
+++ b/views/layouts/contact.ejs
@@ -21,7 +21,7 @@
                                 Call Us
                             </div>
                             <div class="ci-text">
-                                <%= contact.phone %>
+                        <!--        <%= contact.phone %> -->
                             </div>
                         </div>
                     </div>
