--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -23,7 +23,7 @@
 
             <!-- Copyright -->
             <div class="footer-copy font-alt">
-                <a href="http://themeforest.net/user/theme-guru/portfolio" target="_blank">&copy; DevIn <%- new Date().getFullYear() %>.</a>
+                <a href="#top" target="_blank">&copy; DevIn <%- new Date().getFullYear() %>.</a>
             </div>
             <!-- End Copyright -->
 
