--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -99,7 +99,7 @@
         <!-- End Newsletter Section -->
         
         <!-- Contact Section -->
-        <%- partial('../layouts/contacts.ejs') %>
+        <%- partial('../layouts/contact.ejs') %>
         <!-- End Contact Section -->
         
         
